# renovate-release-notes-test

./: pyproject.toml  renovate.json
