[tool.poetry]
name = "renovate-changelog-url-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "renovate_changelog_url_test"}]

[tool.poetry.dependencies]
python = "~3.11"
SQLAlchemy = "2.0.18"
click = "8.1.6"
cython = "0.29.36"
pydantic = "2.0.2"
google-cloud-secret-manager = "2.16.1"
lightgbm = "3.3.5"
gunicorn = "21.0.1"
grpcio = "1.54.2"
protobuf = "4.23.3"
cookiecutter = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
